# skole-backend

./: .coveragerc  .dockerignore  .env.circleci  .flake8  .gitignore  .isort.cfg  .travis.yml  Dockerfile  Dockerfile-prod  Dockerfile.prod  README.md  dependencies.md  docker-compose-circleci.yml  docker-compose.circleci.yml  docker-compose.yml  manage.py  mypy.ini  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  schema.graphql  update_lockfile.sh
.circleci/: check_commits.sh  check_makemessages.sh  config.yml  docker-compose-circleci.yml
.githooks/: pre-commit
.github/: check_makemessages.sh  docker-compose-ci.yml
.github/workflows/: ci.yml  rebase.yml
api/forms/: comment.py  contact.py  course.py  resource.py  starred.py  user.py  vote.py
api/schemas/: city.py  comment.py  contact.py  country.py  course.py  resource.py  resource_type.py  schema.py  school.py  school_type.py  star.py  starred.py  subject.py  user.py  vote.py
api/utils/: common.py  decorators.py  delete.py  file.py  forms.py  messages.py  pagination.py  points.py  star.py  starred.py  vote.py
api/views/: __init__.py  graphql.py  health_check.py
config/: gunicorn_conf.py  settings.py  urls.py  wsgi.py
core/: admin.py
core/fixtures/: initial-beta-codes.yaml  initial-cities.yaml  initial-contact-types.yaml  initial-countries.yaml  initial-courses.yaml  initial-resource-files.yaml  initial-resource-types.yaml  initial-resources.yaml  initial-school-types.yaml  initial-schools.yaml  initial-subjects.yaml  site.yaml  test-data.yaml
core/migrations/: 0001_initial.py  0002_auto_20200305_1808.py  0002_auto_20200315_1213.py  0002_auto_20200406_1727.py  0002_auto_20200423_1246.py  0002_auto_20200423_1323.py  0002_auto_20200423_1427.py  0002_auto_20200424_0437.py  0003_add_translation_model.py  0003_auto_20200307_1207.py  0003_auto_20200315_1359.py  0004_auto_20200321_1436.py  0004_migrate_translatable_fields.py  0005_auto_20200327_1907.py  0005_remove_untranslated_fields.py  0005_star.py  0005_starred.py  0006_auto_20200328_2246.py  0006_correct_field_names_back.py
core/models/: __init__.py  beta_code.py  city.py  comment.py  contact.py  country.py  course.py  resource.py  resource_file.py  school.py  star.py  starred.py  subject.py  user.py  vote.py
core/utils/: types.py  validators.py  vote.py
media/marketing_emails/: test_marketing_email.html
skole/: __init__.py  admin.py  apps.py  backends.py  middleware.py  overridden.py  patched.py  schema.py  signal_handlers.py  signals.py  types.py  views.py
skole/fixtures/: initial-activity-types.yaml  initial-badges.yaml  initial-beta-codes.yaml  initial-cities.yaml  initial-countries.yaml  initial-courses.yaml  initial-marketing-email-senders.yaml  initial-resource-types.yaml  initial-resources.yaml  initial-school-types.yaml  initial-schools.yaml  initial-subjects.yaml  test-data.yaml
skole/forms/: __init__.py  activity.py  base.py  comment.py  contact.py  course.py  email_subscription.py  resource.py  star.py  starred.py  thread.py  user.py  vote.py
skole/middleware/: __init__.py  session.py
skole/migrations/: 0001_initial.py  0002_add_verbose_names.py  0002_rename_badge_users.py  0002_set_null_user.py  0002_user_school_subject.py  0003_add_resource_author.py  0003_add_user_last_my_data_query.py  0003_badge.py  0004_add_school_comments.py  0004_avatar_default.py  0004_comment_school.py  0004_remove_soft_deletion.py  0005_activity.py  0005_add_slug_fields.py  0005_blank_last_my_data_query.py  0006_add_course_codes.py  0006_base_models.py  0007_copy_course_code_to_codes.py  0007_resourse_subject_many2many.py  0008_remove_course_code.py  0008_username_regex.py  0009_add_product_update_and_blog_post_email_permissions.py  0009_capital_file_formats.py  0010_delete_betacode.py  0010_populate_slug_fields.py  0011_add_email_subscription.py  0011_rename_star.py  0012_add_marketing_email.py  0012_rename_activity.py  0013_add_email_notification_permissions.py  0014_make_course_user_blank.py  0015_add_school_to_activity.py  0016_make_all_slugs_unique.py  0017_dont_ever_update_slugs.py  0017_force_null_course_slugs.py  0018_add_badge_progress.py  0018_dont_ever_update_slugs.py  0019_force_update_course_slugs.py  0020_add_badge_progress.py  0021_add_push_notifications.py  (+46 more)
skole/models/: __init__.py  activity.py  activity_type.py  attempted_email.py  author.py  badge.py  badge_progress.py  base.py  beta_code.py  city.py  comment.py  country.py  course.py  daily_visit.py  email_subscription.py  invite_code.py  marketing_email.py  marketing_email_sender.py  referral_code.py  resource.py  resource_type.py  school.py  school_type.py  star.py  starred.py  subject.py  thread.py  user.py  vote.py
skole/schemas/: activity.py  author.py  badge.py  badge_progress.py  base.py  city.py  comment.py  contact.py  country.py  course.py  email_subscription.py  gdpr.py  invite_code.py  mixins.py  referral_code.py  resource.py  resource_type.py  schema.py  school.py  school_type.py  sitemap.py  star.py  starred.py  subject.py  suggestions.py  thread.py  user.py  vote.py
skole/signal_handlers/: __init__.py  _activity.py  _badge.py
skole/tests/: conftest.py  helpers.py  test_admin.py  test_apps.py  test_conftest.py  test_middleware.py  test_overridden.py  test_patched.py  test_signal_handlers.py  test_signals.py  test_types.py  test_views.py  utils.py
skole/types/: __init__.py  _aliases.py  _resolve_info.py  _retyped.py
skole/utils/: api_descriptions.py  cloudmersive.py  constants.py  decorators.py  email.py  exceptions.py  files.py  forms.py  misc.py  mixins.py  pagination.py  push.py  shortcuts.py  token.py  types.py  validators.py
skole/views/: __init__.py  graphql.py  health_check.py
src/: .flake8  manage.py  pytest.ini  settings.py
src/api/: urls.py
src/app/: admin.py  apps.py  settings.py  urls.py
src/core/: admin.py
templates/email/: activation_email.html  password-reset-email.html
tests/api/: test_school.py  test_user.py
tests/test_utils/: __init__.py  schema_test_case.py  skole_schema_test_case.py
(+281 files in other folders)
